# tps-image-registration-gui

./: GUI.py  README.md  create_env.bat  generate_npz.py  models.py  presenter.py  pyproject.toml  ransac.py  requirements.txt  roma_config.py  roma_example.py  roma_matcher.py  test_roma_installation.py
Matchanything/: environment.yaml  requirements.txt
Matchanything/tools/: evaluate_datasets_argparse.py  evaluate_datasets_fin.py  resize_image.py
demo_data/2D/: 2D_project.json  destination_pts.txt  source_pts.txt
demo_data/3D/: 3D_project.json
roma_model/: model_factory.py
roma_model/models/: encoders.py  matcher.py
roma_model/utils/: __init__.py  local_correlation.py  utils.py
src/tpsreg/: GUI.py  image_texture.py  models.py  presenter.py  roma_example.py  roma_matcher.py
src/tpsreg/Matchanything/: pytorch_cuda_test.py
src/tpsreg/Matchanything/configs/models/: roma_model.py
src/tpsreg/Matchanything/create_npz_files/: generate_npz.py
src/tpsreg/Matchanything/scripts/evaluate/: eval_liver_ct_mr.sh
src/tpsreg/Matchanything/src/config/: default.py
src/tpsreg/Matchanything/src/datasets/: common_data_pair.py
src/tpsreg/Matchanything/src/lightning/: lightning_loftr.py
src/tpsreg/Matchanything/src/utils/: dataset.py  metrics.py  profiler.py  utils.py
src/tpsreg/Matchanything/tools/: center_estimation_iterative_cropping.py  dataset_registry.py  evaluate_datasets.py  getgit.py  inference_datasets.py  inference_datasets_fin.py  inference_datasets_opt_MSE.py  plot_gt_correspondences.py  tps.py  warping.py
(+4 files in other folders)
